@@ -1,5 +1,8 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2012-01-15 mmichaud <michael.michaud@free.fr>
+  * Avoid NPE in the case a WMS Layer has no Title
+  
 2012-01-09 mmichaud <michael.michaud@free.fr>
   * Try to make feature selection order more predictable
 
